# YnabSplit

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
src/ynab_split/: __init__.py  __main__.py  categorizer.py  cli.py  config.py  db.py  exceptions.py  mapper.py  models.py  reconciler.py  service.py  ui.py
src/ynab_split/clients/: openai_client.py  splitwise.py  ynab.py
src/ynab_tools/: __init__.py  __main__.py  cli.py  config.py  db.py  exceptions.py  mcp_server.py  models.py
src/ynab_tools/clients/: splitwise.py  ynab.py
src/ynab_tools/split/: __init__.py  categorizer.py  cli.py  mapper.py  reconciler.py  service.py  ui.py
tests/: __init__.py  test_deterministic_draft_id.py  test_rounding.py  test_service.py
